--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12004, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.72MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-399.5KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇻🇳 越南-8.96MB/s(Youtube:不良林), server: 103.166.140.108, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.108}}
+  - {name: 🇨🇳 中国-6.95MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-445.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-479.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-524.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-509.1KB/s(Youtube:不良林), server: 185.160.26.35, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-362.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-306.1KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-247.7KB/s(Youtube:不良林), server: 185.172.113.102, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-211.8KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-412.7KB/s(Youtube:不良林), server: 185.172.113.101, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-352.0KB/s(Youtube:不良林), server: 185.172.113.102, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-390.5KB/s(Youtube:不良林), server: 185.172.113.102, port: 804, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-399.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-399.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-399.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-399.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-399.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-399.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.72MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-399.5KB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.95MB/s(Youtube:不良林)
       - 🇨🇳 中国-445.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-479.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-524.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-509.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-362.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-306.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-247.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-211.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-412.7KB/s(Youtube:不良林)
       - 🇯🇵 日本-352.0KB/s(Youtube:不良林)
       - 🇯🇵 日本-390.5KB/s(Youtube:不良林)
