--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-5.37MB/s(Youtube:不良林), server: jp2.autlinzh.xyz, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: jp2.autlinzh.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.77MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-204.5KB/s(Youtube:不良林), server: 104.156.229.148, port: 36788, type: vmess, uuid: 9fee7249-69fb-490d-e617-cfb54a249932, alterId: 60, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 104.156.229.148}}
-  - {name: 阿联酋-4.92MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
-  - {name: 🇨🇳 中国-308.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇺🇸 美国-5.19MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: 6a582cd4-559f-4874-98e7-76f3465412ae, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.09MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇫🇷 法国-2.91MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林), server: 5.183.102.34, port: 37667, type: vmess, uuid: 66f93c8f-4458-41d3-e447-f0b57d893527, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.77MB/s(Youtube:不良林), server: 52.139.144.99, port: 19090, type: vmess, uuid: bafbb197-ce57-451b-9d7a-82c62ab68c0d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 52.139.144.99}}
+  - {name: 🇨🇦 加拿大-1.77MB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇻🇳 越南-2.19MB/s(Youtube:不良林), server: 103.151.238.40, port: 80, type: vmess, uuid: e982184f-c6e0-4ba4-91cc-71eb6c702588, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /nkpvpn.site, ws-headers: {Host: 103.151.238.40}}
+  - {name: 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林), server: 45.144.176.135, port: 3005, type: ss, cipher: aes-256-cfb, password: 987.085wrcgrwqs36.985}
+  - {name: 🇺🇸 美国-5.00MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-8.85MB/s(Youtube:不良林), server: 103.166.140.104, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.104}}
+  - {name: 🇻🇳 越南-8.73MB/s(Youtube:不良林), server: 103.166.143.196, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.143.196}}
+  - {name: 未知国家-5.22MB/s(Youtube:不良林), server: 103.184.97.4, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.184.97.4}}
+  - {name: 未知国家-5.48MB/s(Youtube:不良林), server: 103.182.17.179, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.182.17.179}}
+  - {name: 🇻🇳 越南-8.88MB/s(Youtube:不良林), server: 103.166.140.109, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.109}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 阿联酋-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
+      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 阿联酋-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
+      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 阿联酋-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
+      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 阿联酋-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
+      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 阿联酋-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
+      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 阿联酋-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
+      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-5.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-204.5KB/s(Youtube:不良林)
-      - 阿联酋-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-5.19MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.09MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.91MB/s(Youtube:不良林)
-      - 🇷🇴 罗马尼亚-3.97MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.77MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.77MB/s(Youtube:不良林)
+      - 🇻🇳 越南-2.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-377.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.00MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.85MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.73MB/s(Youtube:不良林)
+      - 未知国家-5.22MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇻🇳 越南-8.88MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
